[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Simon Ellmann <simon.ellmann@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "intcode"
path = "src/intcode.rs"


[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"